added meta viewport tag for media queries to adapt properly on moblies

--- a/PYTHON/Neural Networks/Calculations Table.html
+++ b/PYTHON/Neural Networks/Calculations Table.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculations Involved</title>
     <link rel="stylesheet" href="../../WEBSITE STYLING/project resources table.css"/>
     <link rel="stylesheet" href="../../WEBSITE STYLING/style.css"/>
     <link rel="stylesheet" href="../../WEBSITE STYLING/menu.css"/>
     <link rel="stylesheet" href="../../WEBSITE STYLING/citations.css"/>
-
-    <title>Calculations Involved</title>
 </head>
 <body>
     <main>
