--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       TechLaunches
     </title>
@@ -23,7 +24,7 @@
           Your Gateway to Innovation
         </h2>
         <div class="welcome-description">
-          <img src="ABOUT ME/Tanushree Subramanian.jpg" alt="Author Picture" class="my-pic"/>
+          <img src="ABOUT ME/Tanushree Subramanian.jpg" alt="TechLaunches Creator Picture" class="my-pic"/>
           <div class="quotes">
             <a href="https://www.linkedin.com/in/tanushree-subramanian-7b4817375">
               Tanushree Subramanian, Creator of TechLaunches
