--- a/C++/Blockchain/mining animation.html
+++ b/C++/Blockchain/mining animation.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PoW Mining Simulator</title>
   <script src="https://cdn.jsdelivr.net/npm/js-sha256@0.9.0/src/sha256.min.js"></script>
   <link rel="stylesheet" href="./mining animation.css">
