--- a/C++/Blockchain/validation animation.html
+++ b/C++/Blockchain/validation animation.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proof of Stake Simulator</title>
   <link rel="stylesheet" href="./validation.css">
 </head>
