--- a/PYTHON/LLM/project resources table.html
+++ b/PYTHON/LLM/project resources table.html
@@ -3,11 +3,11 @@
   
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       PyTorch Functions
     </title>
-    <link rel="stylesheet" href="../../WEBSITE STYLING/project resources table.css"
-    />
+    <link rel="stylesheet" href="../../WEBSITE STYLING/project resources table.css"/>
     <link rel="stylesheet" href="../../WEBSITE STYLING/style.css" />
     <link rel="stylesheet" href="../../WEBSITE STYLING/menu.css" />
     <link rel="stylesheet" href="../../WEBSITE STYLING/citations.css" />
