--- a/PYTHON/LLM/project.html
+++ b/PYTHON/LLM/project.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project Time!</title>
   <link rel="stylesheet" href="../../WEBSITE STYLING/style.css"/>
   <link rel="stylesheet" href="../../WEBSITE STYLING/menu.css"/>
