--- a/PYTHON/NLP/project resources table.html
+++ b/PYTHON/NLP/project resources table.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PyTorch Functions</title>
   <link rel="stylesheet" href="../../WEBSITE STYLING/project resources table.css"/>
   <link rel="stylesheet" href="../../WEBSITE STYLING/style.css"/>
