--- a/PYTHON/Neural Networks/project resources table.html
+++ b/PYTHON/Neural Networks/project resources table.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NumPy Functions</title>
   <link rel="stylesheet" href="../../WEBSITE STYLING/project resources table.css"/>
   <link rel="stylesheet" href="../../WEBSITE STYLING/style.css"/>
