Updated major comp media queries

--- a/PYTHON/Neural Networks/Major companies contributions.html
+++ b/PYTHON/Neural Networks/Major companies contributions.html
@@ -237,9 +237,9 @@
         </div>
         <h2 class="collapsible logos-box">
           <img src="../../WEBSITE STYLING/Companies logos/Microsoft.png" alt="Microsoft Logo"
-          class="logo-header ">
+          class="logo-header spacel">
           <img src="../../WEBSITE STYLING/Companies logos/Meta.png" alt="Meta Logo"
-          class="logo-header spaceb">
+          class="logo-header spacer">
         </h2>
         <div class="content">
           <ul>
