Updated blockchain companies html, css, menu css

--- a/C++/Blockchain/Major companies contributions.html
+++ b/C++/Blockchain/Major companies contributions.html
@@ -42,7 +42,6 @@
             </li>
             <ul>
               <li>
-                <strong>
                   <a href="https://en.wikipedia.org/wiki/Tesla,_Inc.">
                     Tesla
                   </a>
@@ -55,7 +54,6 @@
                     Square
                   </a>
                   :
-                </strong>
                 Bought Bitcoin as a
                 <span class="tooltip">
                   <strong class="tooltipstrong">
@@ -69,7 +67,6 @@
                 .
               </li>
               <li>
-                <strong>
                   <a href="https://en.wikipedia.org/wiki/PayPal">
                     PayPal
                   </a>
@@ -78,11 +75,9 @@
                     Cash App
                   </a>
                   :
-                </strong>
                 Enabled Bitcoin trading.
               </li>
               <li>
-                <strong>
                   <a href="https://en.wikipedia.org/wiki/Fidelity_Investments">
                     Fidelity
                   </a>
@@ -91,7 +86,6 @@
                     BlackRock
                   </a>
                   :
-                </strong>
                 Launched Bitcoin
                 <span class="tooltip">
                   <strong class="tooltipstrong">
@@ -196,16 +190,13 @@
             </li>
             <ul>
               <li>
-                <strong>
-                  <a ref="https://en.wikipedia.org/wiki/JPMorgan_Chase">
+                  <a href="https://en.wikipedia.org/wiki/JPMorgan_Chase">
                     JPMorgan Chase
                   </a>
                   :
-                </strong>
                 Built Quorum (Ethereum-based private blockchain).
               </li>
               <li>
-                <strong>
                   <a href="https://en.wikipedia.org/wiki/Visa_Inc.">
                     Visa
                   </a>
@@ -214,7 +205,6 @@
                     Mastercard
                   </a>
                   :
-                </strong>
                 Experimented with USDC
                 <span class="tooltip">
                   <strong class="tooltipstrong">
@@ -229,7 +219,6 @@
                 payments on Ethereum.
               </li>
               <li>
-                <strong>
                   <a href="https://en.wikipedia.org/wiki/Nike,_Inc.">
                     Nike
                   </a>
@@ -242,7 +231,6 @@
                     Gucci
                   </a>
                   :
-                </strong>
                 Launched NFT collections using Ethereum.
               </li>
             </ul>
@@ -299,7 +287,6 @@
             </li>
             <ul>
               <li>
-                <strong>
                   <a href="https://www.crunchbase.com/organization/travelbybit">
                     TravelbyBit
                   </a>
@@ -308,7 +295,6 @@
                     Travala
                   </a>
                   :
-                </strong>
                 Allow people to pay for flights and hotels using BNB, bringing crypto
                 into real-world travel.
               </li>
@@ -353,12 +339,10 @@
             </li>
             <ul>
               <li>
-                <strong>
                   <a href="https://www.circle.com/">
                     Circle
                   </a>
                   :
-                </strong>
                 Launched USDC stablecoin on Solana (USDC-SPL).
               </li>
             </ul>
