Updated mining animation

--- a/C++/Blockchain/mining animation.html
+++ b/C++/Blockchain/mining animation.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-  <h1>Proof of Work (PoS) Simulator</h1>
+  <h1>Proof of Work (PoW) Simulator</h1>
 
   <!-- Wallet Display -->
   <div id="wallet">🪙 Wallet Balance: <strong><span id="walletBalance">0</span> coins</strong></div>
 
   <!-- Difficulty Slider -->
-  <label class="slider-label">🎚️ Difficulty: <span id="difficultyValue">4</span></label>
+  <label class="slider-label"> Difficulty: <span id="difficultyValue">4</span></label>
   <input type="range" min="1" max="6" value="4" id="difficultySlider" oninput="updateDifficulty(this.value)">
 
   <!-- Block Reward -->
