Created the ai concepts file and added related css, changed h2 hover color in style.html, changed link for AI button in index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         Start Your Journey With
       </h2>
       <div class="features-grid">
-        <a href="PYTHON/Neural Networks/Neural Network.html" class="feature-card">
+        <a href="PYTHON/ai concepts.html" class="feature-card">
           <div class="feature-icon">
             🔮
           </div>
