--- a/PYTHON/ai concepts.html
+++ b/PYTHON/ai concepts.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Topics</title>
+  <title>AI Concepts</title>
   <link rel="stylesheet" href="./ai concepts.css" />
 </head>
 <body>
-    <h1>Explore AI Topics</h1>
+    <h1>Explore AI Concepts</h1>
 
   <div class="flow">
     <a href="./Neural Networks/Neural Network.html">
